fix overflow
fixed overflow being hidden on tight landscape views

--- a/src/components/Wrapper.css
+++ b/src/components/Wrapper.css
@@ -7,6 +7,7 @@
 	align-items: center;
 	justify-content: center;
 	border-radius: 10px;
+	overflow: auto;
 }
 
 @media (max-width: 340px) {
